--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Get the Tag Version
       id: get_tag
-      run: echo "env.TAG" >> $GITHUB_ENV
+      run: echo "git describe --tags" >> $GITHUB_ENV
 
     - name: Build the binary
       run: |
