--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Get the Tag Version
       id: get_tag
-      run: echo ${{ github.ref_name }} >> $GITHUB_ENV
+      run: echo "VERSION=$(echo ${GITHUB_REF} | cut -d'/' -f3)" >> $GITHUB_ENV
 
     - name: Build the binary
       run: |
