--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,6 @@ on:
   push:
     tags:
       - 'v*'          # Trigger only on tags that start with "v"
-    branches:
-      - main          # Make sure it’s on the main branch
 
 jobs:
   build:
@@ -21,8 +19,8 @@ jobs:
         go-version: '1.23'  # Specify your Go version here
 
     - name: Get the Tag Version
-      id: get_tag
-      run: echo "VERSION=$(echo ${GITHUB_REF} | cut -d'/' -f3)" >> $GITHUB_ENV
+      if: startsWith(github.ref, 'refs/tags/')
+      run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
     - name: Build the binary
       run: |
